<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_generated_passwords"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="inclassthree.passwordgenerator.GeneratedPasswordsActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/thread_pwd_scrollview_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="160dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ListView
                android:layout_width="match_parent"
                android:id="@+id/listview1"
                android:layout_height="160dp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:text="@string/async_pwd_scrollview_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView25"
        android:layout_marginTop="10dp"
        android:layout_weight="0.08" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="160dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ListView
                android:layout_width="match_parent"
                android:id="@+id/listview2"
                android:layout_height="160dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:text="@string/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finishBtn"
        android:onClick="goBack"/>
</LinearLayout>